RESOLVED FIXED179879
Fix potential thread safety issue in ThreadSafeIdentified
https://bugs.webkit.org/show_bug.cgi?id=179879
Summary Fix potential thread safety issue in ThreadSafeIdentified
Chris Dumez
Reported 2017-11-19 14:45:37 PST
Fix potential thread safety issue in ThreadSafeIdentified.
Attachments
Patch (3.65 KB, patch)
2017-11-19 14:47 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-11-19 14:47:31 PST
WebKit Commit Bot
Comment 2 2017-11-19 17:08:24 PST
Comment on attachment 327351 [details] Patch Clearing flags on attachment: 327351 Committed r225038: <https://trac.webkit.org/changeset/225038>
WebKit Commit Bot
Comment 3 2017-11-19 17:08:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-19 17:10:36 PST
Note You need to log in before you can comment on or make changes to this bug.