Fix potential thread safety issue in ThreadSafeIdentified https://bugs.webkit.org/show_bug.cgi?id=179879

Reviewed by Darin Adler.

Fix potential thread safety issue in ThreadSafeIdentified. Protect static std::atomic
initialization with an std::call_once() given that we build with
--fno-threadsafe-statics.

* wtf/Identified.h:
(WTF::Identified::Identified):
(WTF::Identified::generateIdentifier):
(WTF::ThreadSafeIdentified::ThreadSafeIdentified):
(WTF::ThreadSafeIdentified::generateIdentifier):


Canonical link: https://commits.webkit.org/195907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225038 268f45cc-cd09-0410-ab3c-d52691b4dbfc